--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "material-ui": "^1.0.0-beta.12",
     "material-ui-icons": "^1.0.0-beta.10",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-facebook-login": "^3.6.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
