--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "dotenv": "^2.0.0",
     "material-ui": "^1.0.0-beta.18",
     "material-ui-icons": "^1.0.0-beta.17",
+    "mdi-material-ui": "^2.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-facebook-login": "^3.6.2",
