--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
     "fs-extra": "0.30.0",
+    "gh-pages": "^1.0.0",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.2",
@@ -40,6 +41,7 @@
     "recursive-readdir": "2.1.0",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
+    "surge": "^0.19.0",
     "truffle-contract": "^1.1.8",
     "truffle-solidity-loader": "0.0.8",
     "url-loader": "0.5.7",
@@ -62,7 +64,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "now-start": "serve --single ./build_webpack"
+    "now-start": "serve --single ./build_webpack",
+    "deploy": "npm run build&&gh-pages -d build_webpack"
   },
   "standard": {
     "parser": "babel-eslint"
