--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 node_js:
   - "node"
+script:
+  - npm run build
 after_success:
   - surge --project ./build_webpack --domain ethwithfriends.xyz
